# adqa-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  schema.json  server.py
config/: channels.yaml
knowledge/: cases.jsonl  index.json  tests.jsonl  tests_index.json  threads.jsonl  threads_index.json
personas/aiden_chen/: persona.md
personas/andy_yu/: persona.md
personas/howard_cheng/: persona.md
personas/kochi_chuang/: persona.md
personas/pineapple_wu/: persona.md
playbook/: cases.jsonl  index.json
skills/ask/: SKILL.md
skills/askagent/: SKILL.md
skills/brew/: SKILL.md
