[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adqa-agent"
version = "0.1.0"
description = "ADQA knowledge base MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "watchdog>=4.0.0",
]

[project.scripts]
adqa-agent = "server:main"
